--- a/css/login.css
+++ b/css/login.css
@@ -64,6 +64,10 @@
     margin-bottom: 20px;
 }
 
+#password_1{
+    margin-bottom: 20px;
+}
+
 legend{
     margin-bottom: 20px;
     text-align: center;
