--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-/* 헤더 */
+/* 공통 CSS  */
+
+
+/* Header */
 
 .header_logo{
     width: 20%;
@@ -31,8 +34,6 @@ header{
   
     
 }
-
-
 
 .header_login{
     position: absolute;
@@ -71,7 +72,7 @@ header ul li{
     overflow: hidden;
   }
 
-/* 메인 */
+/* Main */
 
 .main{
     min-height: 593px;
@@ -81,10 +82,6 @@ header ul li{
 
 }
 
-/* .main p{
-    font-size: 24px;
-    font-weight: 600;
-} */
 .mainpagetitle{
     position: relative;
 font-size: 38px;
@@ -115,6 +112,7 @@ font-size: 38px;
         margin-right: 20px; /* 이미지들 사이의 간격을 조정합니다. */
 }
 
+/* 메뉴 이미지 display  */
 .slider slider-content mainMenu{
     display: flex;
 }
@@ -127,10 +125,7 @@ font-size: 38px;
 }
 
 
-
-
-
-/* 서브메뉴 박스 */
+/* 서브메뉴 리스트 */
 .main_top ul {
     position: absolute;
     right: 0;
@@ -155,7 +150,7 @@ font-size: 38px;
     position: relative;}
 
 
-/* 푸터 */
+/* Footer */
 
 footer{
     border-top: 1px solid #cccccc;
